# notes

./: .gitignore  README.md  pyproject.toml  sample.env
core/notes_generator/: create_notes.py
core/post_processing/: fill_slides.py
tools/audio/audio_extractor/: .gitignore  whisper_audio_extractor.py  whisper_extractor.py
tools/llm/: gemini.py
tools/text/generator/: notes_generator.py
tools/text/slide_processor/: note_slide_mapper.py
tools/text/slide_processor/extractors/: img_handler.py  pdf_handler.py
tools/text/slide_processor/utils/: ocr.py
tools/text/text_formatter/: computer_science_text_formatter.py  text_formatter.py
tools/video/: downloader.py
tools/video/video_downloader/: downloader.py
