[tool.poetry]
name = "lecture note generator"
version = "0.1.0"
description = ""
authors = ["legedith <jatindehmiwal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-generativeai = "^0.7.2"
python-dotenv = "^1.0.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
